name:                urn
version:             0.1.0.0
synopsis:            Sample various things.
license:             MIT
license-file:        LICENSE
author:              Sharif Olorin
maintainer:          sio@tesser.org
copyright:           2016 Sharif Olorin
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
category:            System

library
  hs-source-dirs:      src

  exposed-modules:     System.Random.Urn

  build-depends:       base >= 3 && < 5

                     , mwc-random == 0.13.*
                     , psi == 0.1.*

  default-language:    Haskell2010

executable urn
  hs-source-dirs:      main

  main-is:             urn.hs

  ghc-options:         -O2
                       -Wwarn
                       -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

  build-depends:       base >= 3 && < 5

                     , urn

                     , optparse-applicative >= 0.12 && < 0.14
                     , psi == 0.1.*
